--- a/src/index.html
+++ b/src/index.html
@@ -39,11 +39,26 @@
         </ul>
     </aside>
 
-    <!-- esto lo avanzaremos en un bloque-->
+<!--contiene las ventanas de la pagina wweb-->
     <div class="cont-web">
 
-        <div id="form1">
-            home
+        <div id="frm_home" class="frmhome">
+            <div class="conten1" id="">
+                <h1>MENSAJE SECRETO</h1>
+                <p>Bienvenido(a), use nuestra herramienta gratuita para cifrar mensajes</p>
+            </div>
+            <div class="conten2">
+                <div class="card1" >
+                        <p><i class="icon-lock"></i></p>
+                        <h2>Encode</h2>
+                        <p>Aquì podràs encriptar tus mensajes</p>
+                </div>
+                <div class="card2">
+                    <p><i class=" icon-unlocked"></i></p>
+                    <h2>Decode</h2>
+                    <p>Aqui podras decifrar el mensaje</p>
+                </div>
+            </div>
         </div>
 
         <form id="form" action="#" class="frm1">
@@ -62,7 +77,7 @@
                     <textarea class="b-radio " id="ta_text" cols="30" rows="8" placeholder="Escribe un mensaje aquí"></textarea>
                 </section>
                 <section class="cont">
-                    <input id="btnVal" type="button" value="valor" class="b-radio btn" >
+                    <input id="btnVal" type="button" value="click" class="b-radio btn" >
                 </section>
             </main>
         </form>
@@ -70,13 +85,14 @@
 
 
 
-
+    <!--
     <script>
-        //recagar la pagina 
-        //setTimeout(function () { location.reload(); }, 1000);
+       // recagar la pagina 
+        setTimeout(function () { location.reload(); }, 8000);
     </script>
-    <script type="text/javascript"src="js/cipher.js"></script>
-    <script type="text/javascript"src="js/validarfrm.js"></script>
+    -->
+    <script src="js/cipher.js"></script>
+    <script src="js/index.js"></script>
 </body>
 
 </html>
