--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="stylesheets/screen.css">
     <link rel="stylesheet" href="stylesheets/style.css">
     
-    <title>Document</title>
+    <title>cipher</title>
 </head>
 
 <body class="one-page">
@@ -39,13 +39,13 @@
         </ul>
     </aside>
 
-<!--contiene las ventanas de la pagina wweb-->
+<!--contiene las ventanas de la pagina web-->
     <div class="cont-web">
-
+        <!--pantalla del home-->
         <div id="frm_home" class="frmhome">
             <div class="conten1" >
                 <h1>"MENSAJE SECRETO"</h1>
-                <p>Bienvenido(a), use nuestra herramienta gratuita para cifrar mensajes</p>
+                <p>Bienvenido(a), use nuestra herramienta gratuita para cifrar y descifrar mensaje</p>
             </div>
             <div class="conten2">
                 <div class="card1" id="de_btn">
@@ -53,6 +53,7 @@
                         <h2>Encode</h2>
                         <p>Aquì podràs encriptar tus mensajes</p>
                 </div>
+
                 <div class="card2" id="dd_btn">
                     <p><i class=" icon-unlocked"></i></p>
                     <h2>Decode</h2>
@@ -60,7 +61,7 @@
                 </div>
             </div>
         </div>
-
+        <!--pantalla del encriptado y descencriptado-->
         <form id="form" action="#" class="frm1">
             <header id="rep_header">
                 <i class="icon-lock"></i>Encriptar
